--- a/sass/invite.scss
+++ b/sass/invite.scss
@@ -4,10 +4,7 @@ html,
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-}
-
-body {
-    background-image: url('../assets/background.png');
+    background-image: url('../static/assets/background.png');
     background-size: cover;
 }
 
@@ -28,31 +25,28 @@ main {
     padding-left: 20px;
     justify-content: space-between;
     flex-direction: column;
-}
 
-.container h2 {
-    font-size: 45px;
-    color: white;
-    margin: 0;
-    text-shadow: 1px 1px #000000;
-}
-
-.container p {
-    color: #DADADA;
-    font-size: 22px;
-    text-shadow: 1px 1px #333333;
-}
-
-.container button {
-    width: 90px;
-    background-color: #3E7BE5;
-    border: 1px solid #3E7BE5;
-    padding: 7px 12px;
-    font-size: 18px;
-    color: white;
-    border-radius: 8px;
-}
-
-.container button:hover {
-    background-color: #3E9CE5;
+    h2 {
+        font-size: 45px;
+        color: white;
+        margin: 0;
+        text-shadow: 1px 1px #000000;
+    }
+    p {
+        color: #DADADA;
+        font-size: 22px;
+        text-shadow: 1px 1px #333333;
+    }
+    button {
+        width: 90px;
+        background-color: #3E7BE5;
+        border: 1px solid #3E7BE5;
+        padding: 7px 12px;
+        font-size: 18px;
+        color: white;
+        border-radius: 8px;
+    }
+    button:hover {
+        background-color: #3E9CE5;
+    }
 }
