--- a/sass/invite.scss
+++ b/sass/invite.scss
@@ -4,7 +4,7 @@ html,
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    background-image: url('../static/assets/background.png');
+    background-image: url('../../static/assets/background.png');
     background-size: cover;
 }
 
